--- a/server/interactive_job.ipynb
+++ b/server/interactive_job.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "host =  \"https://alpha-nnsearch.aidigger.com/api/v1/\""
+    "host =  \"api/v1/\""
    ]
   },
   {
@@ -255,12 +255,12 @@
    "source": [
     "from pymongo import MongoClient\n",
     "mongdb={}\n",
-    "#mongodb://nnsearch:Eigen123@dds-bp10da4305cf39f42.mongodb.rds.aliyuncs.com:3717,dds-bp10da4305cf39f41.mongodb.rds.aliyuncs.com:3717/admin?replicaSet=mgset-5028117\n",
+    "#mongodb://.mongodb.rds.aliyuncs.com:3717,dds-bp10da4305cf39f41.mongodb.rds.aliyuncs.com:3717/admin?replicaSet=mgset-5028117\n",
     "mongdb['host']='dds-bp10da4305cf39f42.mongodb.rds.aliyuncs.com'\n",
     "mongdb['port']=3717\n",
     "client=MongoClient(host=mongdb['host'],port=mongdb['port'])\n",
     "dev=client.get_database('dev')\n",
-    "dev.authenticate(name='nnsearch',password='Eigen123')"
+    "dev.authenticate(name='',password='123')"
    ]
   },
   {
